# JMM_CPPLibs

./: CMakeLists.txt  Doxyfile  JMM_CPPLibsConfig.cmake.in  Readme.txt
DataStructures/: CMakeLists.txt
DataStructures/DataStructures/: CappedVector.h  RangeAccessor.h  ShallowMap.h  SparseVector.h  VirtualConstIterator.h
JMM_CPPLibs/DataStructures/: FromComponentsIterator.h
JMM_CPPLibs/LinearAlgebra/: ArrayType.h  BasisReduction.h  HopfLaxMinimize.h  MatrixType.h  SymmetricMatrixPair.h  SymmetricMatrixType.h  VectorPairType.h
JMM_CPPLibs/LinearAlgebra/Implementation/: MatrixType.hxx  SymmetricMatrixType.hxx  VoronoiReduction_Minimize_Data.hxx
JMM_CPPLibs/Macros/: RedeclareTypes.h
JMM_CPPLibs/Output/: BaseIO.hxx  FileIO.hxx  IO.h  IO.hxx
LinearAlgebra/: CMakeLists.txt
LinearAlgebra/LinearAlgebra/: AffineTransformType.h  ArrayType.h  AsymmetricQuadraticNorm.h  BasisReduction.h  BasisReduction.hpp  CMakeLists.txt  DifferentiationType.h  FriendOperators.h  LinearAlgebra_Test.h  MatrixType.h  PointBaseType.h  PointType.h  RanderNorm.h  SquareCube.h  SymmetricMatrixPair.h  SymmetricMatrixType.h  VectorPairType.h  VectorType.h
LinearAlgebra/LinearAlgebra/Implementation/: MatrixType.hxx  SymmetricMatrixType.hxx  VoronoiReduction_Minimize.hxx
MatlabITKInterface/: CMakeLists.txt
MatlabITKInterface/MatlabITKInterface/: CMakeLists.txt  MexMessageWrapper.h  mxIO.h  mxIO.hxx
MatlabITKInterface/MatlabITKInterface/PseudoITK/: CMakeLists.txt  itkImage.h  itkImageRegionIteratorWithIndex.h
Output/: FileIO.nb  FileIO.py
Output/Output/: BaseIO.h  BaseIO.hxx  CMakeLists.txt  EnumToString.h  ExceptionMacro.h  ExportMacros.h  FileIO.h  FileIO.hxx  IO.h  IO.hxx  MathematicaIO.h  MathematicaIO.hxx  MathematicaIOExternC.h  MexIO.h  MexIO.hxx  PyBind11IO.h  PyBind11IO.hxx  PythonIO.h  PythonIO.hxx
Output/Output/Deprecated/: Macros.h  PrintAsMathematicaTable.h  PrintContainers.h
include/: JMM_CPPLibs_config.hpp
include/DataStructures/: CappedVector.h  RedeclareTypesMacro.h
include/LinearAlgebra/: ArrayType.h  AsymmetricQuadraticNorm.h  DifferentiationType.h  FriendOperators.h  PointType.h  VoronoiReduction.h
include/LinearAlgebra/Implementation/: PointBaseType.hxx  VoronoiReduction_KKT.hxx  VoronoiReduction_Minimize.hxx
include/Output/: BaseIO.h  IO.h  IO.hxx  PythonIO.h  PythonIO.hxx
include_NoConda/: CMakeLists.txt
include_NoConda/CompilationNotes/: CMakeLists_Save.txt  CondaInstallFromSource.txt
